--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,45 @@ p {
 .inactive {
     display: none;
 }
+
+/*Mobile Menu*/
+.mobile-menu {
+    position: absolute;
+    top: 6rem;
+    padding: 2.4rem;
+}
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    font-size: var(--md);
+}
+
+.mobile-menu ul {
+    list-style: none;
+    margin-top: 2.4rem;
+    display: flex;
+    flex-direction: column;
+}    
+.mobile-menu ul li {
+    margin-top: .8rem;
+}    
+.mobile-menu .categories li {
+    margin-left: .4rem;
+}
+.mobile-menu .sign-out-container{
+    margin-bottom: 2.4rem;
+}
+.mobile-menu .sign-out-container ul li p {
+    font-size: var(--sm);
+    font-weight: 300;
+}     
+.mobile-menu .sign-out-container ul li a {
+    color:  var(--hospital-green);
+    font-size: var(--sm);
+    font-weight: 400;
+}
+
 @media (max-width: 640px) {
     .menu {
         display: block;
