--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,51 @@ i {
     color: #454545;
 }
 
+/*Product list*/
+.cards-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 24rem);
+    gap: 2.4rem;
+    place-content: center;
+    margin-top: 2rem;
+}
+.product-card {
+    width: 24rem;
+}
+.product-card .product-img {
+    width: 24rem;
+    height: 24rem;
+    border-radius: 2rem;
+    object-fit: cover;
+}
+.product-card .product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: auto;
+    margin-top: 1.2rem;
+}
+.product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: .4rem;
+}
+.product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+}
+.product-card figure img {
+    width: 3.6rem;
+    height: 3.6rem;
+}
+.product-card figure {
+    margin: 0;
+}
+
 @media screen and (max-width: 640px) {
     .menu {
         display: block;
@@ -266,6 +311,17 @@ i {
     }
     .my-order-container {
         width: 100%;
+    }
+    .cards-container {
+        grid-template-columns: repeat(auto-fill, 16rem);
+        gap: 2rem;
+    }
+    .product-card {
+        width: 16rem;
+    }
+    .product-card .product-img {
+        width: 16rem;
+        height: 16rem;
     }
 }
 
