--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,7 @@ i {
     height: 24rem;
     border-radius: 2rem;
     object-fit: cover;
+    cursor: pointer;
 }
 .product-card .product-info {
     display: flex;
@@ -293,6 +294,85 @@ i {
 }
 .product-card figure {
     margin: 0;
+}
+.product-detail {
+    width: 34rem;
+    padding-bottom: 2.4rem;
+    position: absolute;
+    right: 0;
+    top: 8.4rem;
+    background-color: var(--white);
+}
+.product-photo {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.product-photo .product-detail-close {
+    position: absolute;
+    width: 1.4rem;
+    height: 1.4rem;
+    top: 2rem;
+    left: 2rem;
+    background-color: var(--white);
+    z-index: 2;
+    padding: 1.2rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.product-photo .product-detail-close:hover {
+    cursor:pointer;
+}
+.product-photo .product-img {
+    width: 100%;
+    height: 36rem;
+    object-fit: cover;
+    border-radius: 0 0 2rem 2rem;
+}
+.product-info {
+    margin: 2.4rem 2.4rem 0 2.4rem;
+}
+.product-info p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: .4rem;
+}
+.product-info p:nth-child(2) {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 3.2rem;
+}
+.product-info p:nth-child(3) {
+    color: var(--very-light-pink);
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 3.2rem;
+}
+.primary-button{
+    background-color: var(--hospital-green);
+    border-radius: .8rem;
+    border: none;
+    color: var(--white);
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    cursor: hand;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 5rem;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.points i {
+    margin-top: .4rem;
+    font-size: var(--md);
 }
 
 @media screen and (max-width: 640px) {
@@ -322,6 +402,9 @@ i {
     .product-card .product-img {
         width: 16rem;
         height: 16rem;
+    }
+    .product-detail { 
+        top: 6rem;
     }
 }
 
